force-app/main/default/objects/Metadata_Component_Change__c.object
<CustomObject>
    <description>Changes to Metadata Components made in related Stories.</description>
    <fields>
        <fullName>Change_Notes__c</fullName>
        <label>Change Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metadata_Component__c</fullName>
        <label>Metadata Component</label>
        <referenceTo>Metadata_Component__c</referenceTo>
        <relationshipLabel>Metadata Component Changes</relationshipLabel>
        <relationshipName>Metadata_Component_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Metadata_Type__c</fullName>
        <description>Component&apos;s Salesforce metadata type.</description>
        <formula>TEXT( Metadata_Component__r.Metadata_Type__c )</formula>
        <inlineHelpText>Component&apos;s Salesforce metadata type.</inlineHelpText>
        <label>Metadata Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Metadata_Component__c</fullName>
        <formula>Metadata_Component__r.Parent_Metadata_Component__r.Name</formula>
        <label>Parent Metadata Component</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Metadata Component Changes</relationshipLabel>
        <relationshipName>Metadata_Component_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story_Status__c</fullName>
        <formula>TEXT( Story__r.Status__c )</formula>
        <label>Story Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Metadata Component Changes</relationshipLabel>
        <relationshipName>Metadata_Component_Changes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Metadata Component Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Change_Type__c</columns>
        <columns>Metadata_Component__c</columns>
        <columns>Metadata_Type__c</columns>
        <columns>Story_Status__c</columns>
        <columns>Story__c</columns>
        <columns>Release__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C{000000}</displayFormat>
        <label>Change</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Component Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>